objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Attended_Dreamforce__c</fullName>
        <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;
CASE( Dreamforce__c, 
&quot;yes&quot;, &quot;Image ID&quot;, 
&quot;No&quot;, &quot;Image ID&quot;
, &quot;&quot;),&quot;Image Not Available...&quot;,18,18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attended Dreamforce</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Name</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dreamforce__c</fullName>
        <label>Dreamforce</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Guest_Relationship__c</fullName>
        <label>Primary Guest Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Co-worker</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Guest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the Contact being added is also the Primary Guest.</description>
        <inlineHelpText>Check this box if the Contact being added is also the Primary Guest.</inlineHelpText>
        <label>Primary Guest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tour_and_Tasting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour and Tasting</label>
        <referenceTo>Tours_and_Tastings__c</referenceTo>
        <relationshipLabel>Tour and Tasting Guests</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>TWG_Employee</fullName>
        <active>true</active>
        <label>TWG Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>T_T_Guest_RT</fullName>
        <active>true</active>
        <label>T&amp;T Guest RT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_First_Name</fullName>
        <active>false</active>
        <description>Rule to prevent a contact from being created without a First Name</description>
        <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>You must enter the first name of the contact</errorMessage>
    </validationRules>
</CustomObject>